--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Toy Tale</title>
 
     <link rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="src/adapter.js"></script>
+    <script type="text/javascript" src="src/toy.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
   </head>
   <body>
-    
+
     <div id='toy-header'>
       <img src="https://fontmeme.com/permalink/180719/67429e6afec53d21d64643101c43f029.png" alt="toy-header">
     </div>
@@ -30,6 +33,5 @@
     </div>
 
 
-    <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
