--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
     <div id="toy-collection">
     </div>
-
-
+    <script type="text/javascript" src="src/adapter.js"></script>
+    <script type="text/javascript" src="src/toy.js"></script>
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
